# SpriteSheet-Maker

./: .gitignore  Launch SpriteSheet Maker.command  README.md  handoff.md  pyproject.toml  requirements.txt  run_cli.py  run_gui.py  run_web.py
.github/workflows/: build-windows-exe.yml
examples/: make_sample_gif.py
scripts/: build_mac_app.sh  build_windows_exe.bat
src/unity_vx_motion_master/: __init__.py  cli.py  config.py  frame_source.py  gui.py  processor.py  web_app.py
src/unity_vx_motion_master/web_static/: app.js  index.html  styles.css
tests/: smoke_test.py
